# crypto-agent-dp-lab

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CRITICAL_FIXES_SUMMARY.md  FIRST_E2E_EXPERIMENT.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS_SUMMARY.md  PYTHON_VERSION_FIX.md  README.md  crypto-agent-dp-lab.json  export_to_json.py  momentum_test.py  pyproject.toml  src.json  test_e2e_pipeline.py  test_phi_layer.py  test_phi_structure.py
.claude/: settings.local.json
.devcontainer/: README.md  metal.Dockerfile  metal.devcontainer.json
.devcontainer/cuda/: Dockerfile  devcontainer.json
.devcontainer/metal/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
experiments/first_e2e/: README.md  run_experiment.py  setup_env.sh  validate_setup.py
scripts/: format_check.sh  preflight.sh
scripts/benchmarks/: run_all.sh
src/crypto_dp/: __init__.py
src/crypto_dp/benchmarks/: __init__.py  pendulum.py
src/crypto_dp/data/: __init__.py  ingest.py
src/crypto_dp/graph/: __init__.py  scaffold.py
src/crypto_dp/models/: __init__.py  portfolio.py
src/crypto_dp/monitoring/: __init__.py  gradient_health.py
src/crypto_dp/phi/: __init__.py  integration.py  layer.py  rules.py
src/crypto_dp/pipelines/: __init__.py  basic_e2e.py
src/crypto_dp/rl/: __init__.py  agent.py
src/tests/: __init__.py  test_data_ingest.py  test_graph_scaffold.py  test_integration_real.py  test_portfolio.py  test_rl_agent.py
tests/: test_core_fixes.py  test_critical_fixes.py
